--- a/index.html
+++ b/index.html
@@ -6,21 +6,45 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-
+		<script src="jquery.js" type="text/javascript"></script>
+		<script src="plugin/jquery.mask.js" type="text/javascript"></script>
 		
 		<form class="clearfix" action="" method="get">
 			<div class="form-group left">
 				<label>Item:</label>
-				<input type="text" placeholder="Nome do Item" name=""/>
+				<input type="text" placeholder="Nome do Item" class="form campo-nome" name="field-nome"/>
 			</div>
 			<div class="form-group left">
 				<label>Quantidade:</label>
-				<input type="number" name="field-quantidade" value="1"/>
+				<input type="number" class="form campo-quantidade" min="1" name="field-quantidade" value="1"/>
 			</div>
 			<div class="form-group left">
 				<label>Preço Unitário:</label>
-				<input type="text" name="field-preco" placeholder="Preço"/>
+				<input type="text" class="form campo-precoUnitario" name="field-preco" placeholder="Preço"/>
+			</div>
+			<div class="left add-button">
+				<a href="javascript:void(0)">Adicionar</a>
 			</div>
 		</form>	
+
+		<form class="lista hidden clearfix" action="" method="post">
+			<table>
+				<thead>
+					<tr>
+						<th>Nome do Item</th>
+						<th>Quantidade</th>
+						<th>Preço Unitário</th>
+						<th>SubTotal</th>
+					</tr>
+				</thead>
+				<tbody>
+					
+				</tbody>
+			</table>
+
+
+		</form>
+
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
