--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="form-group left">
 				<label>Preço Unitário:</label>
-				<input type="text" class="form campo-precoUnitario" name="field-preco" placeholder="Preço"/>
+				<input type="text" class="form campo-precoUnitario" name="field-preco" placeholder="R$ 00,00"/>
 			</div>
 			<div class="left add-button">
 				<a href="javascript:void(0)">Adicionar</a>
@@ -33,18 +33,18 @@
 					<tr>
 						<th>Nome do Item</th>
 						<th>Quantidade</th>
-						<th>Preço Unitário</th>
-						<th>SubTotal</th>
+						<th>Preço Unitário (R$)</th>
+						<th>SubTotal (R$)</th>
 					</tr>
 				</thead>
 				<tbody>
 					
 				</tbody>
 			</table>
+			<span class="valor-total"></span>
 
 
 		</form>
-
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
